# KubeConfigManager

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.win  KubeConfManager.kdev4  NOTES.md  README.md  assets.qrc
.github/workflows/: cmake.yml
.kdev4/: KubeConfManager.kdev4
assets/: logo.xcf
docs/kubeconfig_examples/: with_extensions.yaml
i18n/: KubeConfManager_es_ES.ts
src/: KubeConfManager.h  clustereditor.cpp  clustereditor.h  clustereditor.ui  contexteditor.cpp  contexteditor.h  contexteditor.ui  contextswitcher.cpp  contextswitcher.h  contextswitcher.ui  createnewkubeconfigdialog.cpp  createnewkubeconfigdialog.h  createnewkubeconfigdialog.ui  kubeconfig.cpp  kubeconfig.h  kubeconfigmerger.cpp  kubeconfigmerger.h  kubeconfigmerger.ui  kubeconfigutils.cpp  kubeconfigutils.h  kubeparser.cpp  kubeparser.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsform.cpp  settingsform.h  settingsform.ui  switchcontextform.cpp  switchcontextform.h  switchcontextform.ui  tint.h  version.h.in
